fixed spacing issues and date for tablet/mobile view

--- a/hw1stylesheet.css
+++ b/hw1stylesheet.css
@@ -5,42 +5,75 @@
     justify-content: center;
     width: 100%;
     margin-top: 25px;
-    margin-bottom: 25px;
-    height: auto;
+    /* margin-bottom: 25px; */
 }
-#date{
-    position: absolute;
-    top: 45px;
-    left: 50px;
+@media only screen and (min-width: 1025px){
+    /* #wrapper{
+        position: sticky;
+        top: 50px;
+        height: 200px;
+        content: "";
+    } */
+    #date{
+        position: relative;
+        top: 45px;
+        left: 50px;
+        font-family: Arial, Helvetica, sans-serif;
+        margin-left: -50px;
+        top: 50px;
+    }
+    #desktop-navigation-bar{
+        display:flex;
+        justify-content: center;
+        list-style: none;
+        border-bottom: 1px solid #cfcbcb;
+        background-color: #333;
+        padding: 30px;
+        width: 90vw;
+        position: sticky;
+        gap: 3vw;
+    }
+    #desktop-navigation-bar a{
+        text-decoration: none;
+        color:#3e3c3c;
+    }
+    #line{
+        width: 1px;
+        height: 15 px;
+        background-color: #a5a1a1
+    }
+}
+@media only screen and (max-width: 1024px){
+    #date{
+        display: none;
+    }
+    #desktop-navigation-bar{
+        display: none;
+    }
+    .top-bar::after{
+        content: "";
+        width: 90%;
+        height: 1px;
+        background-color: #333;
+        margin-top: 20px;
+    }
 }
 #logo img{
     max-width: 50%;
     display: block;
     margin: auto;
 }
-#desktop-navigation-bar{
-    display:flex;
-    justify-content: center;
-    list-style: none;
-    border-bottom: 1px solid #cfcbcb;
-    padding: 30px;
-    width: 90%vw;
-    gap: 3vw;
+#logo::after{
+    content:"";
+    width: 100%;
+    height: 1px;
+    background-color: #b4b4b4;
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
-#line{
-    width: 1px;
-    height: 15 px;
-    background-color: #a5a1a1
-}
-#desktop-navigation-bar a{
-    text-decoration: none;
-    color:#3e3c3c;
-}
-#date{
-    font-family: Arial, Helvetica, sans-serif;
-    margin-left: 10%vw;
-}
-.container{
+
+.grid-container{
     display: grid;
     grid-template-columns: 2fr 3fr 2fr;
     grid-template-rows: 1fr 1fr .05fr;
@@ -48,70 +81,29 @@
     "secondary-article-1 main-article-1 secondary-article-2"
     "secondary-article-3 main-article-2 secondary-article-4";
     gap: 30px;
-    margin-left: 25px;
-    margin-right: 25px;
+    /* margin-left: 25px;
+    margin-right: 25px; */
     border-bottom: 3px solid #7c7575;
     max-width: 95%;
     align-items: stretch;
     overflow: hidden;
     position: relative;
+    background-color: #a5a1a1;
+    margin: 0 auto;
 }
 @media only screen and (max-width: 1024px) and (min-width: 769px){
-    .container{
+
+    .grid-container{
         display: grid;
+        margin: 0 auto;
         grid-template-columns: 3fr 2fr;
         grid-template-areas:
         "main-article-1 secondary-article-1" 
         "main-article-2 secondary-article-2"
         "secondary-article-3 secondary-article-4";
-        padding-bottom: 30px;
+        padding-bottom: 40px;
     } 
-    .container > *::before{
-        content: "";
-        background-color:#cfcbcb; 
-        position: absolute;
-        width: 1px;
-        height: 103.5%;
-        top: 0;
-        right: -15px;
-    }
-}
-@media only screen and (max-width: 768px){
-    .container{
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-areas:
-        "main-article-1"
-        "main-article-2"
-        "secondary-article-1"
-        "secondary-article-2"
-        "secondary-article-3"
-        "secondary-article-4";
-        padding-bottom: 30px; 
-    }
-}
-.container img{
-    max-width: 90%;
-    padding-top: 25px;
-    justify-self: center;
-    height: auto;
-    display: block
-}
-
-.container > *{
-    position: relative;
-}
-.container > *::after{
-    content: "";
-    background-color:#cfcbcb; 
-    position: absolute;
-    width: 95%;
-    height: 1px;
-    top: -15px;
-    left: 2.5%;
-}
-@media only screen and (min-width: 1025px){
-    .container > *::before{
+    .grid-container > *::before{
         content: "";
         background-color:#cfcbcb; 
         position: absolute;
@@ -121,26 +113,52 @@
         right: -15px;
     }
 }
-
-/* .container::before {
-    content: "";
-    position: fixed;
-    left: calc((2/7)*100% + 2.5px);
-    top: 25px;
-    bottom: 25px;
-    width: 1px;
-    background-color: #716767;
+@media only screen and (max-width: 768px){
+    .grid-container{
+        display: grid;
+        margin: 0 auto;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+        "main-article-1"
+        "main-article-2"
+        "secondary-article-1"
+        "secondary-article-2"
+        "secondary-article-3"
+        "secondary-article-4";
+        padding-bottom: 40px; 
+    }
 }
-.container::after { 
-    content: "";
-    position: fixed;
-    left: calc((5/7)*100% - 37.5px);
-    top: 25px;
-    bottom: 25px;
-    width: 1px;
-    background-color: #716767;
-} */
+.grid-container img{
+    max-width: 90%;
+    margin-top: 35px;
+    justify-self: center;
+    height: auto;
+    display: block
+}
 
+.grid-container > *{
+    position: relative;
+    /* padding-top: 20px; */
+}
+.grid-container > *::after{
+    content: "";
+    background-color:#cfcbcb; 
+    position: absolute;
+    width: 95%;
+    height: 1px;
+    top: -15px;
+    left: 2.5%;
+}
+@media only screen and (min-width: 1025px){
+    .grid-container > *::before{
+        content: "";
+        background-color:#cfcbcb; 
+        position: absolute;
+        width: 1px;
+        height: 105%;
+        right: -15px;
+    }
+}
 .article-title{
     font-size:larger;
 }
@@ -175,4 +193,18 @@
 .article-content{
     margin: 25px;
     font-family: Georgia, serif;
+}
+*{
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+}
+.webpage-container{
+    flex-direction: column;
+    align-items: center;
+    background-color: #333;
+    width: 100vw;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin: 0 auto;
 }
